@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-14T08:22:37Z",
+  "timestamp" : "2022-05-14T16:25:08Z",
   "count_outdated" : 1826,
   "uniques_outdated" : 364,
-  "count" : 2108,
+  "count" : 2109,
   "uniques" : 402,
   "clones" : [
     {
@@ -98,8 +98,8 @@
     },
     {
       "timestamp": "2022-05-14T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 0, 2 ],
+      "count": 3,
+      "count_minmax": [ 0, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 0, 2 ]
     }
