@@ -1,5 +1,5 @@
 {
-  "count": 282,
+  "count": 283,
   "uniques": 21,
   "clones": [
     {
@@ -69,7 +69,7 @@
     },
     {
       "timestamp": "2022-05-14T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 2
     }
   ]
