@@ -1,3 +1,10 @@
+2022-05-14T16:25:08Z:
+* notice: last 14d: all unq: 283 21
+* notice: prev accum: outdated-all outdated-unq / all unq: 1826 364 / 2108 402
+* notice: next accum: outdated-all outdated-unq / all unq: 1826 364 / 2109 402
+* notice: prev json diff / prev day diff: unq all: +0 +1 -0 -0 / +2 +4 -0 -0
+* notice: changed dates: [2022-05-14]
+
 2022-05-14T08:22:37Z:
 * notice: last 14d: all unq: 282 21
 * notice: prev accum: outdated-all outdated-unq / all unq: 1826 364 / 2106 400
